--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,16 @@
         <title>Demo 1</title>
     </head>
     <body>
-        <div id="herewego" text-center>
+        <div id="herewego" class="mx-auto mt-8 flex justify-center text-center max-w-screen-lg">
+            
             <!-- <div id="replaceme2" hx-swap-oob="true">Hello world</div> -->
             <div
-                class="container mx-auto mt-8 text-center max-w-screen-lg"
+                class="live2d  mx-auto mt-8 text-center max-w-screen-lg"
+            >
+                <h1>Hello world</h1>
+            </div>
+            <div
+                class="container  mx-auto mt-8 text-center max-w-screen-lg"
             >
                 <div
                     class="overflow-y-scroll bg-white p-2 border h-[500px] space-y-4 rounded-lg m-auto"
@@ -44,7 +50,7 @@
                             class="block grow rounded-lg border p-6 resize-none"
                             required
                         >
-Is C# a programming language or a musical note?</textarea
+はじめまして！</textarea
                         >
                         <button
                             type="submit"
