update index.html add app.yaml

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
 
         <!--チャットコンポーネンツ-->
-        <div class="herewego" text-center>
+        <div class="herewego" class="flex  mx-auto mt-8 text-center max-w-screen-lg">
             <!-- <div id="replaceme2" hx-swap-oob="true">Hello world</div> -->
             <div
                 class="container mx-auto mt-8 text-center max-w-screen-lg"
